Added code to launch new AboutUsActivity

--- a/ChurchApplication/app/src/main/res/values/strings.xml
+++ b/ChurchApplication/app/src/main/res/values/strings.xml
@@ -3,8 +3,7 @@
 
     <string name="app_name">Youth Group</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_about_us">AboutUsActivity</string>
-
+    <string name="title_activity_about_us">About Us</string>
     <string name="about_us_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam pharetra non nibh ut gravida. Pellentesque felis velit, pharetra vitae erat id,
         blandit consectetur enim. Vivamus volutpat, nisl sed dapibus egestas.</string>
     <string name="aboutUsTitle">Who We Are</string>
@@ -16,4 +15,7 @@
     <string name="how_to_connect_title_text">How To Connect</string>
     <string name="how_to_connect_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam pharetra non nibh ut gravida. Pellentesque felis velit, pharetra vitae erat id,
         blandit consectetur enim. Vivamus volutpat, nisl sed dapibus egestas.</string>
+    <string name="title_activity_announcements">AnnouncementsActivity</string>
+    <string name="hello_world">Hello world!</string>
+
 </resources>
