--- a/ChurchApplication/app/src/main/res/values/strings.xml
+++ b/ChurchApplication/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="title_activity_ten_by_ten">TenByTenActivity</string>
     <string name="daily_reading_title">Daily Scripture Reading:</string>
     <string name="sync">Sync</string>
+    <string name="daily_reading">\"\"</string>
 
 </resources>
