--- a/ChurchApplication/app/src/main/res/values/strings.xml
+++ b/ChurchApplication/app/src/main/res/values/strings.xml
@@ -27,5 +27,7 @@
     <string name="daily_reading_title">Daily Scripture Reading:</string>
     <string name="sync">Sync</string>
     <string name="daily_reading">\"\"</string>
+    <string name="emailAddressForPastorRyan">pastorforgey@gmail.com</string>
+    <string name="emailAddressForPastorMichelle">pastormichelle@ministry.com</string>
 
 </resources>
