updated string resources for pastor emails

--- a/ChurchApplication/app/src/main/res/values/strings.xml
+++ b/ChurchApplication/app/src/main/res/values/strings.xml
@@ -28,6 +28,6 @@
     <string name="sync">Sync</string>
     <string name="daily_reading">\"\"</string>
     <string name="emailAddressForPastorRyan">pastorforgey@gmail.com</string>
-    <string name="emailAddressForPastorMichelle">pastormichelle@ministry.com</string>
+    <string name="emailAddressForPastorMichelle">pastorforgey@gmail.com</string>
 
 </resources>
